--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <h2> Assignments </h2>
     <ol>
-        <li><a href="0"> Assignment 1</a></li>
+        <li><a href="a1"> Assignment 1</a></li>
         <li><a href="0"> Assignment 2</a></li>
         
     </ol>
