--- a/a3/index.html
+++ b/a3/index.html
@@ -5,14 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script>
-        function greet(){
-            alert(txtName.value);
-        }
+        function Sum(){
+        let p = Number(n1.value);
+        let q =  Number(n2.value);
+        //alert(p+q);
+        divResult.innerHTML = p+q;
+    }
     </script>
 </head>
 <body>
+    <h1>Assignment 3</h1>
+    <h2>Adding two elements</h2>
+    <input type="text" id="n1">
+    <input type="text" id="n2">
+    <button onclick="Sum()" style="background-color: rgb(230, 212, 12);"> Add</button>
+
+    <div id="divResult"></div>
     
-    <input type="text" id="txtName"/>
-    <button onclick="greet()"  style="background-color: gold;"> Click Me!!</button>
 </body>
 </html>
