--- a/a5/index.html
+++ b/a5/index.html
@@ -9,7 +9,7 @@
 
   <input type="text" id="name" placeholder="Enter Name" /><br><br>
   <input type="email" id="email" placeholder="Enter Email" /><br><br>
-  <input type="text" id="phone" placeholder="Enter Phone" /><br><br>
+  <input type="text" id="phone" placeholder="Enter Password" /><br><br>
 
   <button onclick="submitForm()"> <strong>Submit</strong> </button>
 
@@ -19,7 +19,7 @@
     const submitForm = () => {
       const name = document.getElementById("name").value;
       const email = document.getElementById("email").value;
-      const phone = document.getElementById("phone").value;
+      const phone = document.getElementById("password").value;
 
       const result = `${name}, ${email}, ${phone}`;
       document.getElementById("output").innerText = result;
