--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Details</title>
 </head>
 <body>
     <h1>Veda Sri</h1>
     <h2>My Projects</h2>
     <ol>
         <li><a href="0">Project 1</a></li>
-        <li><a href="0">Project 2</a></li>
+        <li><a href="p2/">Project 2</a></li>
         <li><a href="0">Project 3</a></li>
     </ol>
 
