--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         <li><a href="a7"> Assignment 7</a></li>
         <li><a href="a8"> Assignment 8</a></li>
         <li><a href="a9"> Assignment 9</a></li>
+        <li><a href="a10"> Assignment 10</a></li>
+        <li><a href="a11"> Assignment 11</a></li>
+
 
         
     </ol>
